fix the dark mode transition duration diiference between header and main section

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,10 @@ body {
 section {
   min-height: 100vh;
   padding: 0 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid red;
 }
 
 h1 {
